[package]
name = "spell_correcter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bincode = "1.3.3"
regex = "1.9.5"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
